src/parse/pascal/pascalParser.py
# Generated from pascalParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pascalParser ( Parser ):

    grammarFileName = "pascalParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'<='", "'>='", "'<>'", 
                     "'..'", "'('", "')'", "'['", "']'", "','", "';'", "':'", 
                     "'.'", "'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", 
                     "'@'", "'^'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "UNIT", "LIBRARY", "PACKAGE", 
                      "INTERFACE", "IMPLEMENTATION", "USES", "CONST", "TYPE", 
                      "VAR", "THREADVAR", "LABEL", "RESOURCESTRING", "BEGIN", 
                      "END", "INITIALIZATION", "FINALIZATION", "PROCEDURE", 
                      "FUNCTION", "CONSTRUCTOR", "DESTRUCTOR", "CLASS", 
                      "RECORD", "OBJECT", "ARRAY", "SET", "FILE", "OF", 
                      "PROPERTY", "READ", "WRITE", "DEFAULT", "INDEX", "DISPID", 
                      "STORED", "IMPLEMENTS", "PRIVATE", "PROTECTED", "PUBLIC", 
                      "PUBLISHED", "AUTOMATED", "STRICT", "FORWARD", "OVERLOAD", 
                      "OVERRIDE", "REINTRODUCE", "VIRTUAL", "ABSTRACT", 
                      "STATIC", "INLINE", "OPERATOR", "OUT", "IN", "NIL", 
                      "TRUE", "FALSE", "IF", "THEN", "ELSE", "CASE", "WHILE", 
                      "DO", "REPEAT", "UNTIL", "FOR", "TO", "DOWNTO", "WITH", 
                      "TRY", "EXCEPT", "FINALLY", "RAISE", "ON", "AS", "IS", 
                      "NOT", "AND", "OR", "XOR", "DIV", "MOD", "SHL", "SHR", 
                      "BREAK", "CONTINUE", "EXIT", "GOTO", "REQUIRES", "CONTAINS", 
                      "ASSIGN", "LE", "GE", "NE", "DOTDOT", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "COMMA", "SEMI", "COLON", "DOT", 
                      "PLUS", "MINUS", "STAR", "SLASH", "EQ", "LT", "GT", 
                      "AT", "CARET", "STRING_LITERAL", "HEX_NUMBER", "REAL_NUMBER", 
                      "INTEGER_NUMBER", "IDENT", "LINE_COMMENT", "BRACE_COMMENT", 
                      "PAREN_COMMENT", "WS" ]

    RULE_program = 0
    RULE_module = 1
    RULE_programModule = 2
    RULE_libraryModule = 3
    RULE_packageModule = 4
    RULE_packageRequiresClause = 5
    RULE_packageContainsClause = 6
    RULE_unitModule = 7
    RULE_interfaceSection = 8
    RULE_implementationSection = 9
    RULE_initializationSection = 10
    RULE_finalizationSection = 11
    RULE_usesClause = 12
    RULE_block = 13
    RULE_declarationPart = 14
    RULE_declaration = 15
    RULE_labelSection = 16
    RULE_labelIdentifierList = 17
    RULE_labelIdentifier = 18
    RULE_constSection = 19
    RULE_constDeclaration = 20
    RULE_resourceStringSection = 21
    RULE_typeSection = 22
    RULE_typeDeclaration = 23
    RULE_varSection = 24
    RULE_variableDeclaration = 25
    RULE_routineDeclaration = 26
    RULE_routineImplementation = 27
    RULE_routineHeading = 28
    RULE_procedureHeading = 29
    RULE_functionHeading = 30
    RULE_constructorHeading = 31
    RULE_destructorHeading = 32
    RULE_formalParameters = 33
    RULE_formalParameterSection = 34
    RULE_parameterModifier = 35
    RULE_routineDirectiveList = 36
    RULE_routineDirective = 37
    RULE_typeSpec = 38
    RULE_simpleType = 39
    RULE_subrangeType = 40
    RULE_enumeratedType = 41
    RULE_arrayType = 42
    RULE_typeList = 43
    RULE_setType = 44
    RULE_fileType = 45
    RULE_pointerType = 46
    RULE_procedureType = 47
    RULE_classType = 48
    RULE_classHeritage = 49
    RULE_typeRefList = 50
    RULE_classBody = 51
    RULE_classMember = 52
    RULE_visibilitySection = 53
    RULE_classField = 54
    RULE_classMethod = 55
    RULE_propertyDeclaration = 56
    RULE_propertySpec = 57
    RULE_recordType = 58
    RULE_recordField = 59
    RULE_typeRef = 60
    RULE_statementBlock = 61
    RULE_statementList = 62
    RULE_statement = 63
    RULE_compoundStatement = 64
    RULE_assignmentStatement = 65
    RULE_procedureCallStatement = 66
    RULE_ifStatement = 67
    RULE_caseStatement = 68
    RULE_caseBranch = 69
    RULE_caseLabelList = 70
    RULE_whileStatement = 71
    RULE_repeatStatement = 72
    RULE_forStatement = 73
    RULE_withStatement = 74
    RULE_variableList = 75
    RULE_tryStatement = 76
    RULE_exceptionHandlerList = 77
    RULE_exceptionHandler = 78
    RULE_raiseStatement = 79
    RULE_gotoStatement = 80
    RULE_breakStatement = 81
    RULE_continueStatement = 82
    RULE_exitStatement = 83
    RULE_emptyStatement = 84
    RULE_actualParameterList = 85
    RULE_expressionList = 86
    RULE_expression = 87
    RULE_relationalExpression = 88
    RULE_additiveExpression = 89
    RULE_multiplicativeExpression = 90
    RULE_unaryExpression = 91
    RULE_primaryExpression = 92
    RULE_setConstructor = 93
    RULE_variable = 94
    RULE_designator = 95
    RULE_designatorSuffix = 96
    RULE_constantExpression = 97
    RULE_literal = 98
    RULE_identifierList = 99
    RULE_qualifiedIdentifier = 100
    RULE_identifier = 101

    ruleNames =  [ "program", "module", "programModule", "libraryModule", 
                   "packageModule", "packageRequiresClause", "packageContainsClause", 
                   "unitModule", "interfaceSection", "implementationSection", 
                   "initializationSection", "finalizationSection", "usesClause", 
                   "block", "declarationPart", "declaration", "labelSection", 
                   "labelIdentifierList", "labelIdentifier", "constSection", 
                   "constDeclaration", "resourceStringSection", "typeSection", 
                   "typeDeclaration", "varSection", "variableDeclaration", 
                   "routineDeclaration", "routineImplementation", "routineHeading", 
                   "procedureHeading", "functionHeading", "constructorHeading", 
                   "destructorHeading", "formalParameters", "formalParameterSection", 
                   "parameterModifier", "routineDirectiveList", "routineDirective", 
                   "typeSpec", "simpleType", "subrangeType", "enumeratedType", 
                   "arrayType", "typeList", "setType", "fileType", "pointerType", 
                   "procedureType", "classType", "classHeritage", "typeRefList", 
                   "classBody", "classMember", "visibilitySection", "classField", 
                   "classMethod", "propertyDeclaration", "propertySpec", 
                   "recordType", "recordField", "typeRef", "statementBlock", 
                   "statementList", "statement", "compoundStatement", "assignmentStatement", 
                   "procedureCallStatement", "ifStatement", "caseStatement", 
                   "caseBranch", "caseLabelList", "whileStatement", "repeatStatement", 
                   "forStatement", "withStatement", "variableList", "tryStatement", 
                   "exceptionHandlerList", "exceptionHandler", "raiseStatement", 
                   "gotoStatement", "breakStatement", "continueStatement", 
                   "exitStatement", "emptyStatement", "actualParameterList", 
                   "expressionList", "expression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "primaryExpression", "setConstructor", "variable", "designator", 
                   "designatorSuffix", "constantExpression", "literal", 
                   "identifierList", "qualifiedIdentifier", "identifier" ]

    EOF = Token.EOF
    PROGRAM=1
    UNIT=2
    LIBRARY=3
    PACKAGE=4
    INTERFACE=5
    IMPLEMENTATION=6
    USES=7
    CONST=8
    TYPE=9
    VAR=10
    THREADVAR=11
    LABEL=12
    RESOURCESTRING=13
    BEGIN=14
    END=15
    INITIALIZATION=16
    FINALIZATION=17
    PROCEDURE=18
    FUNCTION=19
    CONSTRUCTOR=20
    DESTRUCTOR=21
    CLASS=22
    RECORD=23
    OBJECT=24
    ARRAY=25
    SET=26
    FILE=27
    OF=28
    PROPERTY=29
    READ=30
    WRITE=31
    DEFAULT=32
    INDEX=33
    DISPID=34
    STORED=35
    IMPLEMENTS=36
    PRIVATE=37
    PROTECTED=38
    PUBLIC=39
    PUBLISHED=40
    AUTOMATED=41
    STRICT=42
    FORWARD=43
    OVERLOAD=44
    OVERRIDE=45
    REINTRODUCE=46
    VIRTUAL=47
    ABSTRACT=48
    STATIC=49
    INLINE=50
    OPERATOR=51
    OUT=52
    IN=53
    NIL=54
    TRUE=55
    FALSE=56
    IF=57
    THEN=58
    ELSE=59
    CASE=60
    WHILE=61
    DO=62
    REPEAT=63
    UNTIL=64
    FOR=65
    TO=66
    DOWNTO=67
    WITH=68
    TRY=69
    EXCEPT=70
    FINALLY=71
    RAISE=72
    ON=73
    AS=74
    IS=75
    NOT=76
    AND=77
    OR=78
    XOR=79
    DIV=80
    MOD=81
    SHL=82
    SHR=83
    BREAK=84
    CONTINUE=85
    EXIT=86
    GOTO=87
    REQUIRES=88
    CONTAINS=89
    ASSIGN=90
    LE=91
    GE=92
    NE=93
    DOTDOT=94
    LPAREN=95
    RPAREN=96
    LBRACK=97
    RBRACK=98
    COMMA=99
    SEMI=100
    COLON=101
    DOT=102
    PLUS=103
    MINUS=104
    STAR=105
    SLASH=106
    EQ=107
    LT=108
    GT=109
    AT=110
    CARET=111
    STRING_LITERAL=112
    HEX_NUMBER=113
    REAL_NUMBER=114
    INTEGER_NUMBER=115
    IDENT=116
    LINE_COMMENT=117
    BRACE_COMMENT=118
    PAREN_COMMENT=119
    WS=120

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self):
            return self.getTypedRuleContext(pascalParser.ModuleContext,0)


        def EOF(self):
            return self.getToken(pascalParser.EOF, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.module()
            self.state = 205
            self.match(pascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programModule(self):
            return self.getTypedRuleContext(pascalParser.ProgramModuleContext,0)


        def unitModule(self):
            return self.getTypedRuleContext(pascalParser.UnitModuleContext,0)


        def libraryModule(self):
            return self.getTypedRuleContext(pascalParser.LibraryModuleContext,0)


        def packageModule(self):
            return self.getTypedRuleContext(pascalParser.PackageModuleContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = pascalParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.state = 211
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.programModule()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.unitModule()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 209
                self.libraryModule()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 210
                self.packageModule()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(pascalParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(pascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def usesClause(self):
            return self.getTypedRuleContext(pascalParser.UsesClauseContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_programModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramModule" ):
                listener.enterProgramModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramModule" ):
                listener.exitProgramModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramModule" ):
                return visitor.visitProgramModule(self)
            else:
                return visitor.visitChildren(self)




    def programModule(self):

        localctx = pascalParser.ProgramModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self.match(pascalParser.PROGRAM)
            self.state = 214
            self.identifier()
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==95:
                self.state = 215
                self.match(pascalParser.LPAREN)
                self.state = 216
                self.identifierList()
                self.state = 217
                self.match(pascalParser.RPAREN)


            self.state = 221
            self.match(pascalParser.SEMI)
            self.state = 223
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 222
                self.usesClause()


            self.state = 225
            self.block()
            self.state = 226
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LibraryModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIBRARY(self):
            return self.getToken(pascalParser.LIBRARY, 0)

        def identifier(self):
            return self.getTypedRuleContext(pascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def usesClause(self):
            return self.getTypedRuleContext(pascalParser.UsesClauseContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_libraryModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibraryModule" ):
                listener.enterLibraryModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibraryModule" ):
                listener.exitLibraryModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibraryModule" ):
                return visitor.visitLibraryModule(self)
            else:
                return visitor.visitChildren(self)




    def libraryModule(self):

        localctx = pascalParser.LibraryModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_libraryModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self.match(pascalParser.LIBRARY)
            self.state = 229
            self.identifier()
            self.state = 230
            self.match(pascalParser.SEMI)
            self.state = 232
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 231
                self.usesClause()


            self.state = 234
            self.block()
            self.state = 235
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(pascalParser.PACKAGE, 0)

        def identifier(self):
            return self.getTypedRuleContext(pascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def END(self):
            return self.getToken(pascalParser.END, 0)

        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def packageRequiresClause(self):
            return self.getTypedRuleContext(pascalParser.PackageRequiresClauseContext,0)


        def packageContainsClause(self):
            return self.getTypedRuleContext(pascalParser.PackageContainsClauseContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_packageModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageModule" ):
                listener.enterPackageModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageModule" ):
                listener.exitPackageModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageModule" ):
                return visitor.visitPackageModule(self)
            else:
                return visitor.visitChildren(self)




    def packageModule(self):

        localctx = pascalParser.PackageModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_packageModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 237
            self.match(pascalParser.PACKAGE)
            self.state = 238
            self.identifier()
            self.state = 239
            self.match(pascalParser.SEMI)
            self.state = 241
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==88:
                self.state = 240
                self.packageRequiresClause()


            self.state = 244
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==89:
                self.state = 243
                self.packageContainsClause()


            self.state = 246
            self.match(pascalParser.END)
            self.state = 247
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageRequiresClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRES(self):
            return self.getToken(pascalParser.REQUIRES, 0)

        def qualifiedIdentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.QualifiedIdentifierContext)
            else:
                return self.getTypedRuleContext(pascalParser.QualifiedIdentifierContext,i)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.COMMA)
            else:
                return self.getToken(pascalParser.COMMA, i)

        def getRuleIndex(self):
            return pascalParser.RULE_packageRequiresClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageRequiresClause" ):
                listener.enterPackageRequiresClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageRequiresClause" ):
                listener.exitPackageRequiresClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageRequiresClause" ):
                return visitor.visitPackageRequiresClause(self)
            else:
                return visitor.visitChildren(self)




    def packageRequiresClause(self):

        localctx = pascalParser.PackageRequiresClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_packageRequiresClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 249
            self.match(pascalParser.REQUIRES)
            self.state = 250
            self.qualifiedIdentifier()
            self.state = 255
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==99:
                self.state = 251
                self.match(pascalParser.COMMA)
                self.state = 252
                self.qualifiedIdentifier()
                self.state = 257
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 258
            self.match(pascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageContainsClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
